--- a/mobile/App/I18n/locales/en.json
+++ b/mobile/App/I18n/locales/en.json
@@ -7,6 +7,8 @@
   "invest": "Invest",
   "share": "Share",
   "save": "Save",
+  "causes": "Causes",
+  "benefits": "PPR SGF Benefits",
 
   "passwordReset": "Password request",
   "sendResetToken": "Send reset token",
