--- a/mobile/App/I18n/locales/pt.json
+++ b/mobile/App/I18n/locales/pt.json
@@ -7,6 +7,8 @@
   "invest": "Invista",
   "share": "Partilhe",
   "save": "Poupe",
+  "causes": "Causas",
+  "benefits": "Benefícios do PPR SGF",
 
   "passwordReset": "Pedido de password",
   "sendResetToken": "Enviar token",
