--- a/mobile/App/I18n/locales/pt.json
+++ b/mobile/App/I18n/locales/pt.json
@@ -9,6 +9,9 @@
   "save": "Poupe",
   "causes": "Causas",
   "benefits": "Benefícios do PPR SGF",
+  "systematicSavings": "Poupança Sistemática a longo prazo",
+  "stoikShares": "PPR SGF Stoik Ações",
+  "projectWeshareashare": "Projeto WeShareAShare",
 
   "passwordReset": "Pedido de password",
   "sendResetToken": "Enviar token",
