working on screens - Share, Investment and saving

--- a/mobile/App/I18n/locales/en.json
+++ b/mobile/App/I18n/locales/en.json
@@ -22,6 +22,7 @@
   "more": "More",
   "participant": "Something i guess",
   "subscription": "Subscription",
+  "startSimulation": "Start a simulation",
 
   "passwordReset": "Password request",
   "sendResetToken": "Send reset token",
