--- a/mobile/App/I18n/locales/pt.json
+++ b/mobile/App/I18n/locales/pt.json
@@ -22,6 +22,7 @@
   "more": "Outros",
   "participant": "Something i guess",
   "subscription": "Subscription",
+  "startSimulation": "Faça uma simulação",
 
   "passwordReset": "Pedido de password",
   "sendResetToken": "Enviar token",
