weshareashare project screen with redirect to causes

--- a/mobile/App/I18n/locales/en.json
+++ b/mobile/App/I18n/locales/en.json
@@ -24,6 +24,10 @@
   "subscription": "Subscription",
   "startSimulation": "Start a simulation",
 
+  "people": "People",
+  "animals&environment": "Animals & Environment",
+  "arts&culture": "Arts & Culture",
+
   "passwordReset": "Password request",
   "sendResetToken": "Send reset token",
   "resetSuccessMessage": "We've emailed you the instructions",
