--- a/mobile/App/I18n/locales/pt.json
+++ b/mobile/App/I18n/locales/pt.json
@@ -20,7 +20,7 @@
 
   "notifications": "Notificações",
   "more": "Outros",
-  "participant": "Something i guess",
+  "participant": "Participant",
   "subscription": "Subscription",
   "startSimulation": "Faça uma simulação",
 
