--- a/mobile/App/I18n/locales/en.json
+++ b/mobile/App/I18n/locales/en.json
@@ -20,7 +20,7 @@
 
   "notifications": "Notifications",
   "more": "More",
-  "participant": "Something i guess",
+  "participant": "Participant",
   "subscription": "Subscription",
   "startSimulation": "Start a simulation",
 
