--- a/mobile/App/I18n/locales/en.json
+++ b/mobile/App/I18n/locales/en.json
@@ -4,13 +4,13 @@
   "signIn": "Sign In",
   "signUp": "Sign Up",
   "signOut": "Sign Out",
-  "mainPage": "Main menu",
+  "mainMenu": "Main Page",
   "invest": "Invest",
   "share": "Share",
   "save": "Save",
   "causes": "Causes",
   "benefits": "PPR SGF Benefits",
-  "systematicSavings": "Systematic Savings",
+  "saving": "The Saving",
   "stoikShares": "PPR SGF Stoik Shares",
   "projectWeshareashare": "WeShareAShare Project",
   "simulation": "Simulation",
