--- a/mobile/App/I18n/locales/pt.json
+++ b/mobile/App/I18n/locales/pt.json
@@ -4,13 +4,13 @@
   "signIn": "Iniciar sessão",
   "signUp": "Registo",
   "signOut": "Sair",
-  "mainPage": "Página principal",
+  "mainMenu": "Página principal",
   "invest": "Investimento",
   "share": "Partilhe",
   "save": "Poupe",
   "causes": "Causas",
   "benefits": "Benefícios do PPR SGF",
-  "systematicSavings": "Poupança Sistemática",
+  "saving": "A Poupança",
   "stoikShares": "PPR SGF Stoik Ações",
   "projectWeshareashare": "Projeto WeShareAShare",
   "simulation": "Simulação",
