--- a/mobile/App/I18n/locales/en.json
+++ b/mobile/App/I18n/locales/en.json
@@ -16,7 +16,8 @@
   "simulation": "Simulation",
   "performances": "Performance",
   "wallet": "Wallet",
-  "onboarding": "Onboarding",
+  "otherInvest": "Start investment",
+  "onboarding": "Invest",
 
   "riskWarnings": "Risk warnings",
 
