--- a/mobile/App/I18n/locales/pt.json
+++ b/mobile/App/I18n/locales/pt.json
@@ -16,7 +16,9 @@
   "simulation": "Simulação",
   "performances": "Rendibilidade",
   "wallet": "Carteira",
-  "onboarding": "Onboarding",
+  "onboarding": "Invista",
+  "otherInvest": "Comece a investir",
+
 
   "riskWarnings": "Riscos",
 
