só eu é que gosto de fazer commits? :(

--- a/mobile/App/I18n/locales/en.json
+++ b/mobile/App/I18n/locales/en.json
@@ -29,8 +29,9 @@
 
   "notifications": "Notifications",
   "more": "More",
-  "participant": "Participant",
-  "subscription": "Subscription",
+  "participant": "Onboarding",
+  "riskProfile": "Risk profile",
+  "chooseCause": "Choose a cause",
   "startSimulation": "Start a simulation",
 
   "people": "People",
