--- a/mobile/App/I18n/locales/pt.json
+++ b/mobile/App/I18n/locales/pt.json
@@ -30,8 +30,9 @@
 
   "notifications": "Notificações",
   "more": "Outros",
-  "participant": "Participant",
-  "subscription": "Subscription",
+  "participant": "Onboarding",
+  "riskProfile": "Perfil de risco",
+  "chooseCause": "Escolha uma causa",
   "startSimulation": "Faça uma simulação",
 
   "people": "Social",
