Use portuguese in form

--- a/mobile/App/I18n/locales/en.json
+++ b/mobile/App/I18n/locales/en.json
@@ -52,6 +52,7 @@
 
   "insertPersonalData": "Please fill in your personal data.",
   "name": "Name",
+  "gender": "Gender",
   "birthDate": "Birth Date",
   "address": "Address",
   "telephone": "Telephone No.",
