--- a/mobile/App/I18n/locales/pt.json
+++ b/mobile/App/I18n/locales/pt.json
@@ -59,5 +59,11 @@
   "contactUsScreen": "Contacte-nos",
   "contactUsButton": "Enviar",
   "contactUsSuccessMessage": "A sua mensagem foi recebida com sucesso. Desde já, obrigado.",
-  "contactUsIntroText": "Envie-nos uma mensagem e nós responderemos o mais rapidamente possível. O seu feedback é extremamente importante para nós."
+  "contactUsIntroText": "Envie-nos uma mensagem e nós responderemos o mais rapidamente possível. O seu feedback é extremamente importante para nós.",
+
+  "benefitsSaving": "Possibilidade de automatização da poupança",
+  "benefitsWallet": "Carteira diversificada e global",
+  "benefitsStructure": "Estrutura fisicamente eficiente",
+  "benefitsCause": "Possibilidade de apoiar uma causa"
+
 }
