--- a/mobile/App/I18n/locales/pt.json
+++ b/mobile/App/I18n/locales/pt.json
@@ -5,16 +5,17 @@
   "signUp": "Registo",
   "signOut": "Sair",
   "mainMenu": "Página principal",
-  "invest": "Investimento",
+  "invest": "PPR SGF Stoik Ações",
   "share": "Partilhe",
-  "save": "Poupe",
+  "projectWeShareAShare": "Projecto WeShareAShare",
+  "save": "Poupança sistemática a longo prazo",
   "causes": "Causas",
-  "benefits": "Benefícios do PPR SGF",
+  "benefits": "Benefícios do PPR SGF Stoik Ações",
   "saving": "A Poupança",
   "stoikShares": "PPR SGF Stoik Ações",
   "projectWeshareashare": "Projeto WeShareAShare",
-  "simulation": "Simulação",
-  "performances": "Rendibilidade",
+  "simulation": "Simulador",
+  "performances": "Evolução do Valor da UP",
   "wallet": "Carteira",
   "onboarding": "Invista",
   "otherInvest": "Comece a investir",
