fixes to interfaces, once again

--- a/mobile/App/I18n/locales/pt.json
+++ b/mobile/App/I18n/locales/pt.json
@@ -17,8 +17,7 @@
   "simulation": "Simulador",
   "performances": "Evolução do Valor da UP",
   "wallet": "Carteira",
-  "onboarding": "Invista",
-  "otherInvest": "Comece a investir",
+  "onboarding": "Comece a Investir",
 
   "riskWarnings": "Riscos",
 
